try to solve contrast issues and device-dependent wanings

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body, html {
 .bgimg-1 {
   background-image: url('images/dropbox-icon-line-icon-connection-circuit-board.jpg');
   min-height: 100%;
+  background-color: #2c3e50;
 }
 
 /* Second image (Portfolio) */
@@ -31,6 +32,7 @@ body, html {
 .bgimg-3 {
   background-image: url("images/chaos-theory.webp");
   min-height: 400px;
+  background-color: #2c3e50;
 }
 
 .w3-wide {letter-spacing: 10px;}
